force-app/main/default/objects/Kerridge_Quote_Line__c/Kerridge_Quote_Line__c.object-meta.xml
<CustomObject>
    <label>Kerridge Quote Line</label>
    <nameField>
        <label>Kerridge Quote Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kerridge Quote Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>