force-app/main/default/objects/Kerridge_Quote_Line__c/fields/Kerridge_QuoteId__c.field-meta.xml
<CustomField>
    <fullName>Kerridge_QuoteId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kerridge Quote</label>
    <referenceTo>Kerridge_Quote__c</referenceTo>
    <relationshipLabel>Kerridge Quote Lines</relationshipLabel>
    <relationshipName>Kerridge_Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>