force-app/main/default/objects/Kerridge_Quote_Line__c/fields/Line_Item_description__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_description__c</fullName>
    <label>Line Item description</label>
    <type>TextArea</type>
</CustomField>