force-app/main/default/objects/Kerridge_Quote_Line__c/fields/Product_not_found__c.field-meta.xml
<CustomField>
    <fullName>Product_not_found__c</fullName>
    <formula>ISBLANK( Product__r.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product not found</label>
    <type>Checkbox</type>
</CustomField>