force-app/main/default/objects/Kerridge_Quote_Line__c/fields/QUOTE__c.field-meta.xml
<CustomField>
    <fullName>QUOTE__c</fullName>
    <externalId>true</externalId>
    <label>QUOTE  #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>