force-app/main/default/objects/Kerridge_Quote_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Kerridge_QuoteId__c</columns>
    <columns>Line_Item_description__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Quantity__c</columns>
    <columns>QUOTE__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Total_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>